--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Bootstrap/bootstrap.min.css">
-    <script src="Bootstrap/jquery.min.js"></script>
+    <script src="style.css"></script>
     <script src="Bootstrap/popper.min.js"></script>
     <script src="Bootstrap/bootstrap.min.js"></script>
+    <script src="kalkulal.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Utazás</title>
 </head>
