--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
     <header class="container">
-        <h1>Utazási iroda</h1>
+        
+       <center><h1>Utazási iroda</h1></center>
     </header>
 
     <div class="container">
