b.A képek esetében alkalmazza a cikkeposztálykijelölőt!

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="p-2 border border-white orszag">
                 <h1 id="kalkulator">Törökország</h1>
-                <img src="torokorszag.jpg">
+                <img cikkep="torokorszag.jpg">
                 <p>Törökország talán az egyik legismertebb úti cél a magyar utazók körében. A Török Riviérán minden adott, ami egy kellemes, családi pihenéshez szükséges: bámulatos öblök, végtelen hosszú strandok, a háttérben a Taurus-hegység zöldellő vonulata és még sok más. Homokos illetve kavicsos tengerpart, kristálytiszta tengervíz, különböző vízi sportolási lehetőségek, hangulatos éttermek, All Inklusive-szállodák sora várja az ideérkező vendégeket. A nyaralás alatt érdemes megismerkedni a környező vidék nevezetességeivel is, mint pl. Aspendos, Ephesus, Perge vagy Myra. Válasszanak számos, érdekes fakultatív kirándulásunk közül! A kalandkedvelőknek különösen ajánljuk a rafting-túrát vagy a kék hajóutak valamelyikét. A helybeliek vendégszeretete, a török ételspecialitások, az ehhez tartozó légkör és természetesen a bazárok keleties forgataga mindenkit magával ragad. Ha élményekben gazdag nyaralásra vágynak, a Török Riviéra igazán jó választás.</p>
             </div>
         </div>
@@ -134,7 +134,7 @@
         </div>
     </div>
     <footer class="container my-2 p-2 bg-warning border">
-        <p>2021 - Jedlik</p>
+        <p>Weiss Manfréd xd</p>
     </footer>
 </body>
 
