--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
         <!--Országok-->
         <div class="row">
-            <div bootstrap class="p-2 border border-white orszag">
+            <div bootstrap  class="p-2 border border-white orszag">
                 <h1 id="kalkulator">Bulgária</h1>
+                
                 <img src="bulgaria.jpg">
                 <p>A Napospart Bulgária legnépszerűbb, nyugati színvonalú nyaralóhelye, melyet a 20. század közepén építettek Neszebar nyaralóváros mellett. Homokos, kék zászlós tengerpartja különleges homokdűnéivel 8 kilométer hosszan nyúlik el. Neszebár történelmi városa, a fekete tenger gyöngye egy félszigeten fekszik, és egy földnyelvvel kapcsolódik a szárazföldhöz. A 3000 éves óvárost a Fekete-tenger veszi körül. 1983 óta a világörökség része, amelyet egyedülálló földrajzi fekvésével és építészeti stílusával érdemelt ki. Bulgária Napospartja nyaralás szempontjából a legfelkapottabb és legkedveltebb úti célja a kikapcsolódni vágyóknak. A 7 km hosszú és 150 méter széles, sekély finomhomokos Napospart egy igazi családi és gyermekparadicsom.</p>
             </div>
@@ -62,7 +63,7 @@
             </div>
             <div bootstrap class="p-2 border border-white orszag">
                 <h1 id="kalkulator">Törökország</h1>
-                <img cikkep="torokorszag.jpg">
+                <img src="torokorszag.jpg">
                 <p>Törökország talán az egyik legismertebb úti cél a magyar utazók körében. A Török Riviérán minden adott, ami egy kellemes, családi pihenéshez szükséges: bámulatos öblök, végtelen hosszú strandok, a háttérben a Taurus-hegység zöldellő vonulata és még sok más. Homokos illetve kavicsos tengerpart, kristálytiszta tengervíz, különböző vízi sportolási lehetőségek, hangulatos éttermek, All Inklusive-szállodák sora várja az ideérkező vendégeket. A nyaralás alatt érdemes megismerkedni a környező vidék nevezetességeivel is, mint pl. Aspendos, Ephesus, Perge vagy Myra. Válasszanak számos, érdekes fakultatív kirándulásunk közül! A kalandkedvelőknek különösen ajánljuk a rafting-túrát vagy a kék hajóutak valamelyikét. A helybeliek vendégszeretete, a török ételspecialitások, az ehhez tartozó légkör és természetesen a bazárok keleties forgataga mindenkit magával ragad. Ha élményekben gazdag nyaralásra vágynak, a Török Riviéra igazán jó választás.</p>
             </div>
         </div>
