--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#horvat">Horvátország</a>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#kalkulator">Kalkulátor</li>
+
                 </li>
             </ul>
         </nav>
